--- a/Fiesta INN/fade-small.html
+++ b/Fiesta INN/fade-small.html
@@ -110,9 +110,9 @@
             line-height: 1.1;
             color: #000;
             text-align: left;
-            margin-top: 10px;
+            margin-top: 18px;
             width: 99%;
-           font-size:14px;
+           font-size:16px;
             
         }
 
@@ -223,7 +223,7 @@
         .fadesmall #logo {
             
             height:30px;
-            margin-top:5px; 
+            margin-top:-15px; 
             margin-left:200px;
 
         }
@@ -278,7 +278,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title"> Organiza tu día y logra todas las metas que te propongas mientras descansas. Somos <b style="color:#d03037">#BusinessClass.</b> </span></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/v8vfbwT.png"></div>
