--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -172,7 +172,7 @@
     <body>
 
         <div class="video-container">
-            <iframe src="" style="width:360px;height:300px;" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" id="fitvid434752"></iframe>
+            <iframe src="" style="width:360px;height:300px;" "margin-top: -10px" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" id="fitvid434752"></iframe>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">                
