--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -167,6 +167,7 @@
                 border: 1px solid #333;
                 text-decoration: none;
                 color: #333;
+                margin-top: 2px;
             }
         </style>
     </head>
