--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -159,7 +159,7 @@
                 width: 200px !important;
             }
             .modal .modal-content .body .column .link {
-                margin-top: -5px;
+                margin-top: -15px;
             }
             .modal .modal-content .body .column .link a {
                 padding: 2px 2px;
@@ -174,7 +174,7 @@
     <body>
 
         <div class="video-container">
-            <iframe src="" style="width:360px;height:300px;" "margin-top: -100px" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" id="fitvid434752"></iframe>
+            <iframe src="" style="width:360px;height:300px;margin-top: -100px; margin-left: -30px;"  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" id="fitvid434752"></iframe>
 
             <!-- The Modal -->
             <div id="myModal" class="modal">                
