--- a/Juguetron/Cube.html
+++ b/Juguetron/Cube.html
@@ -1010,7 +1010,7 @@ var el = document.getElementById('i302');
 
 el.addEventListener('click', function(e){
     /*#i308.i309.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/nqAd8LmMzDu'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1128,7 +1128,7 @@ var el = document.getElementById('i318');
 
 el.addEventListener('click', function(e){
     /*#i324.i325.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/nqAd8LmMzDu'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
