--- a/Falabella2/Europa/Fade300x250.html
+++ b/Falabella2/Europa/Fade300x250.html
@@ -80,7 +80,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/GXK9PFj.gif)
+            background-image: url(https://i.imgur.com/G4Y2BRm.gif)
 
         }
 
@@ -234,7 +234,7 @@
             margin-left: 8px;
             display:inline;
             float:left;
-            margin-top: -5px;
+            margin-top: -18px;
             
         }
 
@@ -265,7 +265,7 @@
           .fadesmall #logo {
             
             height:30px;
-            margin-top: 0px; 
+            margin-top: 5px; 
             margin-left:235px;
             margin-bottom: -10px;
 
