--- a/Falabella2/Turquía/Fade300x250.html
+++ b/Falabella2/Turquía/Fade300x250.html
@@ -80,7 +80,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/XFSm57q.gif)
+            background-image: url(https://i.imgur.com/hqpgqTA.gif)
 
         }
 
